--- a/EventBookingApp_BLL/EventBookingApp_BLL.csproj
+++ b/EventBookingApp_BLL/EventBookingApp_BLL.csproj
@@ -6,4 +6,15 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\EventBookingApp_Contracts\EventBookingApp_Contracts.csproj" />
+    <ProjectReference Include="..\EventBookingApp_DAL\EventBookingApp_DAL.csproj" />
+  </ItemGroup>
+
 </Project>
